--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.5"
+tower-http = { version = "0.2", features = ["cors"] }
+tokio = { version = "1.0", features = ["full"] }
