--- a/crates/tauri/Cargo.toml
+++ b/crates/tauri/Cargo.toml
@@ -12,12 +12,14 @@ rust-version = "1.57"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.4" }
+tauri-build = { version = "1.0.0-rc.4", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-rc.4", features = [ "api-all" ] }
+tauri = { version = "1.0.0-rc.4", features = ["api-all"] }
+
+backend = { path = "../backend" }
 
 [features]
 # by default Tauri runs in production mode
