--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 axum = "0.5"
 tower-http = { version = "0.2", features = ["cors"] }
 tokio = { version = "1.0", features = ["full"] }
+serde = "1"
