--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -13,5 +13,8 @@ yew = "0.19.3"
 yew-router = "0.16.0"
 yew-hooks = "0.1"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 wasm-logger = "0.2.0"
+js-sys = "0.3"
+web-sys = "0.3"
 wee_alloc = "0.4.5"
