--- a/crates/tauri/Cargo.toml
+++ b/crates/tauri/Cargo.toml
@@ -12,12 +12,14 @@ rust-version = "1.57"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.4", features = [] }
+tauri-build = { version = "1.0.0-rc", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-rc.4", features = ["api-all"] }
+tauri = { version = "1.0.0-rc", features = ["api-all"] }
+portpicker = "0.1"
+once_cell = "1"
 
 backend = { path = "../backend" }
 
