--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -10,3 +10,5 @@ axum = { version = "0.5", features = ["ws"] }
 tower-http = { version = "0.2", features = ["cors"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = "1"
+
+types = { path = "../types" }
