--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "server"
+name = "types"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.5"
-tower-http = { version = "0.2", features = ["cors"] }
-tokio = { version = "1.0", features = ["full"] }
 serde = "1"
-
-types = { path = "../types" }
