--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -9,14 +9,13 @@ edition = "2021"
 log = "0.4"
 serde = "1"
 reqwest = { version = "0.11", features = ["json"] }
-yew = "0.19.3"
-yew-router = "0.16.0"
-yew-hooks = "0.1.56"
+yew = { version = "0.20.0", features = ["csr"] }
+yew-router = "0.17.0"
+yew-hooks = "0.2.0"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 wasm-logger = "0.2.0"
 js-sys = "0.3"
 web-sys = "0.3"
-wee_alloc = "0.4.5"
 
 types = { path = "../types" }
