--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -17,5 +17,6 @@ wasm-bindgen-futures = "0.4"
 wasm-logger = "0.2.0"
 js-sys = "0.3"
 web-sys = "0.3"
+tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
 
 types = { path = "../types" }
