Remove conflicting `rlib` crate-type from backend's "Cargo.toml" file

--- a/crates/tauri/Cargo.toml
+++ b/crates/tauri/Cargo.toml
@@ -31,7 +31,7 @@ tauri-plugin-process = "2"
 
 [lib]
 name = "app_lib"
-crate-type = ["staticlib", "cdylib", "rlib", "lib"]
+crate-type = ["staticlib", "cdylib", "lib"]
 
 [features]
 # by default Tauri runs in production mode
