Upgrade `tauri_sys` frontend dependency to its `v2` branch

--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -17,6 +17,7 @@ wasm-bindgen-futures = "0.4"
 wasm-logger = "0.2.0"
 js-sys = "0.3"
 web-sys = "0.3"
-tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
-
+tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = [
+    "all",
+] }
 types = { path = "../types" }
