--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.5"
+axum = { version = "0.5", features = ["ws"] }
 tower-http = { version = "0.2", features = ["cors"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = "1"
